--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.9.0",
+    "leaflet": "^1.9.4",
     "vue": "^3.2.47",
+    "vue-leaflet": "^0.1.0",
     "vue-router": "^4.2.1"
   },
   "devDependencies": {
